--- a/index.html
+++ b/index.html
@@ -9,11 +9,33 @@
 <body>
     <div id="header">
         <h1>Powerlust Wiki</h1>
-        <div style="border:solid 10px black; position:absolute; right:0px;"> LOGO</div>
+        <div style="position:absolute; right:0px; top:-10px;"><img src="images/pwrlst_name.webp" alt="POWERLUST" height="100vh"></div>
     </div>
     <div id="main">
         <h2>Powerlust Wiki</h2>
-        <p>Game description</p>
+        <span style="color:red; text-decoration: underline; font-style: italic; font-weight: bold;"> This website is still work in progress, i swear it's going to get better</span>
+        <div>
+            <p>Powerlust is an <span style="font-weight:bold;">old school action RPG</span> inspired by games like <span style="font-weight:bold;">Diablo 1, Might and Magic 7 and Baldur's Gate.</span> Made by a guy who loved playing them.</p>
+            <p>
+                Travel through an open world, design your own character class and feed your LUST for POWER by crushing your foes. <br>
+                Bonus replayability thanks to procedural generation and tons of abilities. Legendary items with unique abilities and item sets will allow you to completely change the gameplay of your favorite class. <br>
+                Optional permadeath for hardcore roguelike fans!
+            </p>
+        </div>
+        <p style="font-size: 17px; text-align: center; font-family: open sans, sans-serif; font-weight: bold;">
+            <span>What's inside ?</span>
+            <ul style="font-size: 17px; text-align: center;list-style-position: inside; font-family: open sans, sans-serif; font-weight: bold;margin:0; padding:0;">
+                <li>Procedurally generated dungeons.</li>
+                <li>Skill-based combat.</li>
+                <li>No rigid classes.</li>
+                <li>Tons of masteries, skills and builds.</li>
+                <li>Open world to explore.</li>
+                <li>Optional permadeath.</li>
+                <li>Controller support.</li>
+                <li>Awesome discord community.</li>
+            </ul>
+
+        </p>
 
         <h3>Index</h3>
         <table>
@@ -62,7 +84,7 @@
         <p>faq details</p>
     </div>
     <footer>
-        This Page is created by a player and community discord member, not related to Powerlust creator - Contact me on discord.
+        This Page is created by a player and community discord member, not related to Powerlust creator, i do not own any rights on Powerlust images and content - Contact me on discord with @daeltam if you have any problem/questions.
     </footer>
 </body>
 </html>
