--- a/spells.html
+++ b/spells.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="header">
-        <h1>Powerlust Wiki (test)</h1>
+        <h1>Powerlust Wiki</h1>
         <div style="border:solid 10px black; position:absolute; right:0px;"> LOGO</div>
     </div>
     <div id="main">
