changing some colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Powerlust Wiki</h2>
         <span style="color:red; text-decoration: underline; font-style: italic; font-weight: bold;"> This website is still work in progress, i swear it's going to get better</span>
         <div>
-            <p>Powerlust is an <span style="font-weight:bold;">old school action RPG</span> inspired by games like <span style="font-weight:bold;">Diablo 1, Might and Magic 7 and Baldur's Gate.</span> Made by a guy who loved playing them.</p>
+            <p> <a href="https://www.bartmamzer.com/">Powerlust</a> is an <span style="font-weight:bold;">old school action RPG</span> inspired by games like <span style="font-weight:bold;">Diablo 1, Might and Magic 7 and Baldur's Gate.</span> Made by a guy who loved playing them.</p>
             <p>
                 Travel through an open world, design your own character class and feed your LUST for POWER by crushing your foes. <br>
                 Bonus replayability thanks to procedural generation and tons of abilities. Legendary items with unique abilities and item sets will allow you to completely change the gameplay of your favorite class. <br>
