Finished fire magic

--- a/spells.html
+++ b/spells.html
@@ -9,15 +9,15 @@
   <body>
     <div id="header">
         <h1>Powerlust Wiki</h1>
-        <div style="border:solid 10px black; position:absolute; right:0px;"> LOGO</div>
+        <div style="position:absolute; right:0px; top:-10px;"><img src="images/pwrlst_name.webp" alt="POWERLUST" height="100vh"></div>
     </div>
     <div id="main">
         <h2>Spells</h2>
         <h3 id="firemagic"><div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div> Fire Magic</h3>
-        <div>
-            <h4>Firebolt <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div></h4>
+        <div class="magic">
+            <h4>Firebolt <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             
-            <p>
+            <div>
                 <em>Description :</em>
                 <ul>
                     <li>Gain 15 energy per hit</li>
@@ -31,9 +31,9 @@
                 <em>Damage </em> (lvl 50 - mastery10 - spells lvl 10 - + 259% sp) : 550 <br>
                 <em>Dps :</em> 900 <br>
                 <em>Dps with good gear :</em> 1.1k
-            </p>
-            <h4>Fireball <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div> </h4>
-            <p>
+            </div>
+            <h4>Fireball <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <div>
                 <em>Description :</em>
                 <ul>
                     <li>Cost : 50 energy</li>
@@ -47,9 +47,9 @@
                 <em>Dps :</em> 9000 <br>
                 <em>Dps with good gear :</em> 120k <br>
                 <em>what's the legend ?</em> 50% dmg buff
-            </p>
-            <h4>Fiery Path <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div></h4>
-            <p>
+            </div>
+            <h4>Fiery Path <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <div>
                 <em>Description :</em>
                 <ul>
                     <li>Cost : 50 energy</li>
@@ -58,9 +58,9 @@
                     <li>Grand master: faster cast rate</li>
                 </ul>
                 <em>Base damage</em> (lvl 50, 0 masteries, spells lvl 1)  : 7
-            </p>
-            <h4>Inbue fire <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div></h4>
-            <p>
+            </div>
+            <h4>Inbue fire <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <div>
                 <em>Description :</em>
                 <ul>
                     <li>Cost : 50 energy</li>
@@ -71,9 +71,9 @@
                 <em>Base damage</em> (lvl 50, 0 masteries, spells lvl 1)  : 150 <br>
                 <em>Base dps :</em> 300 <br>
                 <em>what's the legend ?</em> 50% dmg buff
-            </p>
-            <h4>Dragon's breath <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div></h4>
-            <p>
+            </div>
+            <h4>Dragon's breath<div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <div>
                 <em>Description :</em>
                 <ul>
                     <li>Cost : 50 energy</li>
@@ -88,9 +88,9 @@
                 <em>Char with good gear :</em> 145k <br>
                 <em>Dps with good gear :</em> 180k 150mana <br>
                 <em>what's the legend ?</em> 50% nerf
-            </p>
-            <h4>Armageddon <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div></h4>
-            <p> 
+            </div>
+            <h4>Armageddon <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <div> 
                 <em>Description :</em>
                 <ul>
                     <li>Cost : 150 energy</li>
@@ -103,9 +103,9 @@
                 <em>Dps :</em> 6500 per meteor <br>
                 <em>Char with good gear :</em> 75k per meteor <br>
                 <em>Dps with good gear :</em> 350k 450mana <br>
-            </p>
-            <h4>Immolation <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div></h4>
-            <p>
+            </div>
+            <h4>Immolation<div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <div>
                 <em>Description :</em>
                 <ul>
                     <li>Cost : 150 energy</li>
@@ -118,7 +118,22 @@
                 <em>Dps :</em> 9000 <br>
                 <em>Dps with good gear :</em> 120k <br>
                 <em>what's the legend ?</em> 50% dmg buff
-            </p>
+            </div>
+            <h4>Implosion <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div> </h4>
+            <div>
+                <em>Description :</em>
+                <ul>
+                    <li>Cost : 300 energy</li>
+                    <li>A huge double explosion, sucking enemies towards the center.</li>
+                </ul>
+                <em>Base damage</em> (lvl 50, 0 masteries, spells lvl 1)  : 1500 (2×750) <br>
+                <em>Base dps :</em> 750 <br>
+                <em>Damage </em> (lvl 50 - mastery10 - spells lvl 10 - + 259% sp) : 21k <br>
+                <em>Dps :</em> 24k <br>
+                <em>Char with good gear :</em> 160k <br>
+                <em>Dps with good gear :</em> 600k 900 mana spam<br>
+                <em>what's the legend ?</em> 50% dmg buff
+            </div>
         </div>
         <h3 id="Water Magic">Water Magic</h3>
         <div>
