Added Ids to the spells

--- a/spells.html
+++ b/spells.html
@@ -15,7 +15,7 @@
         <h2>Spells</h2>
         <h3 id="firemagic"><div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px;">Icon</div> Fire Magic</h3>
         <div class="magic">
-            <h4>Firebolt <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <h4 id="firebolt">Firebolt <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             
             <div>
                 <em>Description :</em>
@@ -32,7 +32,7 @@
                 <em>Dps :</em> 900 <br>
                 <em>Dps with good gear :</em> 1.1k
             </div>
-            <h4>Fireball <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <h4 id="fireball">Fireball <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             <div>
                 <em>Description :</em>
                 <ul>
@@ -48,7 +48,7 @@
                 <em>Dps with good gear :</em> 120k <br>
                 <em>what's the legend ?</em> 50% dmg buff
             </div>
-            <h4>Fiery Path <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <h4 id="firerypath">Fiery Path <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             <div>
                 <em>Description :</em>
                 <ul>
@@ -59,7 +59,7 @@
                 </ul>
                 <em>Base damage</em> (lvl 50, 0 masteries, spells lvl 1)  : 7
             </div>
-            <h4>Inbue fire <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <h4 id="inbuefire">Inbue fire <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             <div>
                 <em>Description :</em>
                 <ul>
@@ -72,7 +72,7 @@
                 <em>Base dps :</em> 300 <br>
                 <em>what's the legend ?</em> 50% dmg buff
             </div>
-            <h4>Dragon's breath<div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <h4 id="dragonsbreath">Dragon's breath<div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             <div>
                 <em>Description :</em>
                 <ul>
@@ -89,7 +89,7 @@
                 <em>Dps with good gear :</em> 180k 150mana <br>
                 <em>what's the legend ?</em> 50% nerf
             </div>
-            <h4>Armageddon <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <h4 id="armageddon">Armageddon <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             <div> 
                 <em>Description :</em>
                 <ul>
@@ -104,7 +104,7 @@
                 <em>Char with good gear :</em> 75k per meteor <br>
                 <em>Dps with good gear :</em> 350k 450mana <br>
             </div>
-            <h4>Immolation<div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
+            <h4 id="immolation">Immolation<div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div></h4>
             <div>
                 <em>Description :</em>
                 <ul>
@@ -119,7 +119,7 @@
                 <em>Dps with good gear :</em> 120k <br>
                 <em>what's the legend ?</em> 50% dmg buff
             </div>
-            <h4>Implosion <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div> </h4>
+            <h4 id="implosion">Implosion <div style="background-color: black;width:30px;color:white; height:30px; margin:0px 0px 0px 10px; padding:0px;">Icon</div> </h4>
             <div>
                 <em>Description :</em>
                 <ul>
