modification of wip message

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div id="main">
         <h2>Powerlust Wiki</h2>
-        <span style="color:red; text-decoration: underline; font-style: italic; font-weight: bold;"> This website is still work in progress, i swear it's going to get better</span>
+        <span style="color:red; text-decoration: underline; font-style: italic; font-weight: bold;"> This website is still work in progress, if you want to help contact me on discord.</span>
         <div>
             <p> <a href="https://www.bartmamzer.com/">Powerlust</a> is an <span style="font-weight:bold;">old school action RPG</span> inspired by games like <span style="font-weight:bold;">Diablo 1, Might and Magic 7 and Baldur's Gate.</span> Made by a guy who loved playing them.</p>
             <p>
