--- a/spells.html
+++ b/spells.html
@@ -135,7 +135,7 @@
                 <em>what's the legend ?</em> 50% dmg buff
             </div>
         </div>
-        <h3 id="Water Magic">Water Magic</h3>
+        <h3 id="watermagic">Water Magic</h3>
         <div>
             Water magic Spells
         </div>
