--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <th></th>
                     <th>Shadow</th>
                     <th>Gauntlets</th>
-                    <th>__***Divinity***__ (heal ⬇️)</th>
+                    <th>Divinity(heal ⬇️)</th>
                     <th>Sewers</th>
                 </tr>
                 <tr>
@@ -97,7 +97,7 @@
                     <th></th>
                     <th>Necro</th>
                     <th>Boots</th>
-                    <th>__**CRAFTING**__</th>
+                    <th>CRAFTING</th>
                     <th>Crypt</th>
                 </tr>
                 <tr>
